# clockAdapter

./: CMakeLists.txt  README.md
adaptee_lib/: AnalogClock.cpp  AnalogClock.hpp  AnalogTimeParams.cpp  AnalogTimeParams.hpp  CMakeLists.txt
adapter_lib/: AClock.hpp  CMakeLists.txt  DigitalClockAdapter.cpp  DigitalClockAdapter.hpp  Time.cpp  Time.hpp
lib/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
